test/files/neg/t5265b.check
t5265b.scala:7: error: Implicit definition must have explicit type (inferred T[String]) [quickfixable]
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=Missing.tsMissing
  implicit val tsMissing = new T[String] {}   // warn val in trait
               ^
t5265b.scala:20: error: Implicit definition must have explicit type (inferred T[String]) [quickfixable]
Scala 3 migration messages are issued as errors under -Xsource:3. Use -Wconf or @nowarn to demote them to warnings or suppress.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=Child.tsChild
  implicit val tsChild = new T[String] {}     // warn (no warn with -Xsource-features:infer-override)
               ^
2 errors
